--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xuxi",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "author": "Ilham Khoeri <ilkhoeri@gmail.com> (https://github.com/ilkhoeri)",
   "repository": {
     "type": "git",
@@ -105,7 +105,7 @@
     "check": "yarn lint:check && yarn prettier:check",
     "fix": "yarn lint:fix && yarn prettier:fix",
     "clean": "rm -rf lib/* deno/lib/*",
-    "build": "yarn clean && yarn build:cjs && yarn build:esm && yarn build:deno && yarn prettier",
+    "build": "yarn clean && yarn build:cjs && yarn build:esm && yarn build:deno && yarn prettier && yarn minify",
     "build:deno": "tsx ./script/info.ts deno && node ./configs/deno-build.mjs && cp ./README.md ./deno/lib",
     "build:esm": "tsx ./script/info.ts esm && rollup --config ./configs/rollup.config.mjs --compact",
     "build:cjs": "tsx ./script/info.ts cjs && tsc -p ./configs/tsconfig.cjs.json",
