--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,4 +39,4 @@ jobs:
         with:
           project: "xuxi"
           entrypoint: "https://deno.land/std@0.217.0/http/file_server.ts"
-          root: "out"
+          root: "/"
