Refactor API: rename object to ocx, update cnx exports
Replaces all references to the 'object' API with 'ocx' for consistency, updates documentation and tests accordingly, and refactors cnx exports to provide named serialization utilities (cnxSerialize, cnxRecursive, cnxInstance). Also updates build scripts and version numbers to 1.0.3. This change improves clarity and aligns the API with current naming conventions.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xuxi",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "author": "Ilham Khoeri <ilkhoeri@gmail.com> (https://github.com/ilkhoeri)",
   "repository": {
     "type": "git",
@@ -105,10 +105,10 @@
     "check": "yarn lint:check && yarn prettier:check",
     "fix": "yarn lint:fix && yarn prettier:fix",
     "clean": "rm -rf lib/* deno/lib/*",
-    "build": "yarn clean && yarn build:cjs && yarn build:esm && yarn build:deno && yarn prettier && yarn minify",
-    "build:deno": "tsx ./script/info.ts deno && node ./configs/deno-build.mjs && cp ./README.md ./deno/lib",
-    "build:esm": "tsx ./script/info.ts esm && rollup --config ./configs/rollup.config.mjs --compact",
+    "build": "yarn clean && yarn build:cjs && yarn build:esm && yarn build:deno && yarn build:types && yarn prettier && yarn minify",
     "build:cjs": "tsx ./script/info.ts cjs && tsc -p ./configs/tsconfig.cjs.json",
+    "build:esm": "tsx ./script/info.ts esm && rollup --config ./configs/rollup.config.mjs --compact",
+    "build:deno": "tsx ./script/info.ts deno && node ./configs/deno-build.mjs && cp ./README.md ./deno/lib",
     "build:types": "tsc -p ./configs/tsconfig.types.json",
     "build:test": "tsc -p ./configs/tsconfig.test.json",
     "test:watch": "yarn test:ts-jest --watch",
@@ -125,7 +125,8 @@
     "prepare:test": "husky .husky/pre-publish \"yarn test\"",
     "prepare": "husky",
     "prepublishOnly": "npm run test && npm run build && npm run build:deno",
-    "jsr:publish": "yarn prettier && cd deno/lib && npx jsr publish",
+    "publish:npm": "npm publish --access public",
+    "publish:jsr": "yarn prettier && cd deno/lib && npx jsr publish",
     "lint": "eslint src --cache",
     "format": "prettier src",
     "typecheck": "tsc --noEmit",
